--- a/src/index.css
+++ b/src/index.css
@@ -83,7 +83,7 @@ body {
 }
 .c-player--controls .play-btn {
   display: flex;
-  margin: 0 30px;
+  margin: 0 25px;
   padding: 20px;
   border-radius: 50%;
   box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.8),
@@ -98,7 +98,9 @@ body {
   cursor: pointer;
 }
 
-.c-player--controls .skip-btn {
+.c-player--controls .skip-btn,
+.for-backward {
+  margin: 0 14px;
   border: none;
   outline: none;
   background: none;
