--- a/src/index.css
+++ b/src/index.css
@@ -211,3 +211,24 @@ input[type="range"]::-moz-range-progress {
   border-top-left-radius: 16px;
   border-bottom-left-radius: 16px;
 }
+
+input[type="range"] {
+  -webkit-appearance: none;
+}
+
+input::-webkit-slider-runnable-track {
+  background-color: turquoise;
+  border: turquoise;
+  height: 6px;
+  border-radius: 16px;
+}
+
+input[type="range"]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  border: none;
+  height: 16px;
+  width: 16px;
+  border-radius: 50%;
+  background: white;
+  margin-top: -5px;
+}
